[tool.poetry]
name = "imgapp"
version = "0.1.0"
description = ""
authors = ["i97henka <i97henka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
flask = "^2.3.2"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
imgapp = "imgapp:main"
